# paser-lang

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: python-package.yml  test.yml
json_parser/: parser.py  token.py
logic_parser/: ast.py  exceptions.py  expr.py  main.py  parser.py  repl.py  token.py  tokenizer.py
logic_parser/examples/: ex1.lp  ex2.lp
tests/: test_json_parser.py  test_logic_parser.py
