[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json-parser"
version = "0.1.0"
description = "A simple JSON-like parser and tokenizer in Python."
authors = [{ name = "hereisjohnny2", email = "carvalho.joaomc@gamil.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest"]
