[project]
name = "paser-lang"
version = "0.1.0"
description = "A Python project with a JSON-like parser and a propositional logic parser/evaluator."
authors = [{ name = "hereisjohnny2", email = "carvalho.joaomc@gamil.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]
