[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paser-lang"
version = "0.1.0"
description = "A Python project with a JSON-like parser and a propositional logic parser/evaluator."
authors = [{ name = "hereisjohnny2", email = "carvalho.joaomc@gamil.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools]
packages = ["json_parser", "logic_parser"]
